# fsv

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NOTES  README.md  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  fsv.spec  fsv.spec.in  fsv.wmconfig
debug/: Makefile.am  Makefile.in  debug.c  debug.h
doc/: Makefile.am  Makefile.in  about.html  custom.dsl  fsv.sgml  menus.html  mouse.html  startup.html  t1.html  window.html
intl/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  README.gnome  gnome-color-picker.c  gnome-color-picker.h  gnome-dateedit.c  gnome-dateedit.h  gnome-i18nP.h  nvstore.c  nvstore.h  scandir.c
po/: Makefile.in.in  POTFILES.in  cat-id-tbl.c  fsv.pot
src/: Makefile.am  Makefile.in  TODO  about.c  about.h  animation.c  animation.h  callbacks.c  callbacks.h  camera.c  camera.h  colexp.c  colexp.h  color.c  color.h  common.c  common.h  dialog.c  dialog.h  dirtree.c  dirtree.h  filelist.c  filelist.h  fsv.c  fsv.h  fsv3d.h  geometry.c  geometry.h  gui.c  gui.h  ogl.c  ogl.h  scanfs.c  scanfs.h  tmaptext.c  tmaptext.h  viewport.c  viewport.h  window.c  window.h
src/xmaps/: back.xpm  birdseye_view.xpm  blockdev.xpm  button_cancel.xpm  button_ok.xpm  cd-root.xpm  cd-up.xpm  chardev.xpm  charset.xbm  fifo.xpm  folder.xpm  fsv-icon.xpm  mini-blockdev.xpm  mini-chardev.xpm  mini-fifo.xpm  mini-folder-open.xpm  mini-folder.xpm  mini-regfile.xpm  mini-socket.xpm  mini-symlink.xpm  mini-unknown.xpm  regfile.xpm  socket.xpm  symlink.xpm  unknown.xpm
